k8s_volume/spring_deploy_nfs.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: spring-deployment
spec:
  replicas: 3
  selector:
    matchLabels:
      app: spring-app
  template:
    metadata:
      labels:
        app: spring-app
    spec:
      containers:
        - name: spring-app-cont
          image: vicheak/spring-app:1
          ports:
            - containerPort: 8080
          volumeMounts:
            - name: spring-volume
              mountPath: /workspace
      # volumes:
      # - name: spring-volume
      #   persistentVolumeClaim:
      #     claimName: my-pvc
      volumes:
        - name: spring-volume
          nfs:
            server: 10.149.0.4
            path: /opt/nfs/data/
---
apiVersion: v1
kind: Service
metadata:
  name: spring-service
spec:
  selector:
    app: spring-app
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
      # nodePort: 30010
  # type: NodePort            
  type: ClusterIP
